--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,10 @@ jobs:
           node-version: '18'  # Use your Node.js version
 
       - name: Install dependencies
-        run: npm install
+        run: npm install 
+        
+      - name: fix dependencies
+        run:  npm audit fix --force 
 
       - name: Run build
         run: npm run build
