--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server/index.js",
+    "sitemap": "node generate-sitemap.js",
     "dev:server": "nodemon server/index.js",
     "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\""
   },
   "dependencies": {
+    "glob": "^10.2.0",
     "@emailjs/browser": "^4.1.0",
     "@huggingface/inference": "^3.15.0",
     "@supabase/supabase-js": "^2.39.3",
@@ -28,7 +30,8 @@
     "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.3",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "sitemap": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -48,6 +51,7 @@
     "globals": "^15.9.0",
     "nodemon": "^3.0.3",
     "postcss": "^8.4.35",
+    "sitemap-generator": "^8.5.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
