--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "sitemap": "node generate-sitemap.mjs",
+    "sitemap": "ts-node generate-sitemap.ts",
     "dev:server": "nodemon server/index.js",
     "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\""
   },
   "dependencies": {
-    "glob": "^10.2.0",
     "@emailjs/browser": "^4.1.0",
     "@huggingface/inference": "^3.15.0",
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "framer-motion": "^10.18.0",
+    "glob": "^10.2.0",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.1.0",
     "nodemailer": "^6.10.1",
@@ -53,7 +53,8 @@
     "postcss": "^8.4.35",
     "sitemap-generator": "^8.5.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^6.3.5"
   }
