--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "sitemap": "ts-node generate-sitemap.ts",
+    "sitemap": "node --loader ts-node/esm --tsconfig tsconfig.sitemap.json generate-sitemap.ts",
     "dev:server": "nodemon server/index.js",
     "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\""
   },
@@ -30,13 +30,12 @@
     "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.3",
-    "react-vertical-timeline-component": "^3.6.0",
-    "sitemap": "^8.0.0"
+    "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.19.11",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-vertical-timeline-component": "^3.3.6",
@@ -51,6 +50,7 @@
     "globals": "^15.9.0",
     "nodemon": "^3.0.3",
     "postcss": "^8.4.35",
+    "sitemap": "^8.0.0",
     "sitemap-generator": "^8.5.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
