--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "sitemap": "ts-node-esm generate-sitemap.ts",
     "dev:server": "nodemon server/index.js",
     "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\""
   },
@@ -56,6 +55,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-sitemap": "^0.8.2"
   }
 }
